2015-10-29  Anders Carlsson  <andersca@apple.com>

        Remove a never used SPI delegate method
        https://bugs.webkit.org/show_bug.cgi?id=150680

        Reviewed by Beth Dakin.

        The webView:contextMenuItemSelected:forElement: method was added 9 years ago, seemingly for feature parity with the Windows port.
        The delegate method will never be called unless a menu item has the internal WebKit action/target pair, and a tag that 
        is set to >= ContextMenuItemBaseApplicationTag. Because of this, we can safely remove it.

        * DefaultDelegates/WebDefaultUIDelegate.m:
        (-[WebDefaultUIDelegate webView:willPopupMenu:]):
        (-[WebDefaultUIDelegate webView:didDrawRect:]):
        (-[WebDefaultUIDelegate webView:didScrollDocumentInFrameView:]):
        (-[WebDefaultUIDelegate webView:contextMenuItemSelected:forElement:]): Deleted.
        * WebCoreSupport/WebContextMenuClient.mm:
        (WebContextMenuClient::contextMenuItemSelected): Deleted.
        * WebView/WebUIDelegatePrivate.h:

2015-10-28  Anders Carlsson  <andersca@apple.com>

        WebKit, not WebCore, should do context menu conversion
        https://bugs.webkit.org/show_bug.cgi?id=150640

        Reviewed by Tim Horton.

        * WebView/WebHTMLView.mm:
        (createShareMenuItem):
        (createMenuItem):
        (createMenuItems):
        (customMenuFromDefaultItems):

2015-10-26  Anders Carlsson  <andersca@apple.com>

        Remove dead context menu code
        https://bugs.webkit.org/show_bug.cgi?id=150567

        Reviewed by Tim Horton.

        * WebCoreSupport/WebContextMenuClient.h:
        * WebCoreSupport/WebContextMenuClient.mm:
        (WebContextMenuClient::getCustomMenuFromDefaultItems): Deleted.

2015-10-23  Anders Carlsson  <andersca@apple.com>

        Invoke the context menu delegate callback right before we return the menu
        https://bugs.webkit.org/show_bug.cgi?id=150521

        Reviewed by Tim Horton.
